--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "description": "Backend de gestor de citas",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
